# novelMaker

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.sh  deploy.sh  pyproject.toml  render.yaml  requirements.txt
obsidian-plugin/: manifest.json  package.json  styles.css
obsidian-plugin/src/: api.ts  main.ts  settings.ts  sync.ts  types.ts
obsidian-plugin/src/views/: NovelMakerView.ts
scripts/: sync-dev-log.sh
server/: app.py  collab_manager.py  storage.py
server/api/: animation.py  characters.py  collab.py  export.py  generate.py  media.py  outline.py  projects.py  settings.py
server/media/: __init__.py  models.py  pipeline.py  subtitles.py  tts.py  video.py
src/novel_maker/: __init__.py  __main__.py  context_builder.py  main.py  memory.py  models.py  prompts.py  state_manager.py  token_tracker.py  utils.py  workflow.py
src/novel_maker/agents/: checker.py  dialogue.py  planner.py  refiner.py  storyboard.py  writer.py
tests/: test_context_builder.py  test_state_manager.py  test_utils.py
web/: package-lock.json  package.json
web/src/: App.jsx  api.js
web/src/components/: AnimationTab.jsx  ChaptersTab.jsx  CharactersTab.jsx  GenerateTab.jsx  MediaTab.jsx  OutlineTab.jsx  SettingsTab.jsx
web/src/hooks/: useCollaboration.js
web/src/pages/: ProjectDetail.jsx  ProjectList.jsx
